OpenAPIの出力形式を整理
