# backend/src/api/components/schemas.ts
@@ -1,67 +1,70 @@
 import { z } from "@hono/zod-openapi"
 
-export const TestCase = z.object({
-  input: z.string(),
-  output: z.string(),
-})
+export const Language = z
+  .object({
+    name: z.string(),
+    version: z.string(),
+  })
+  .openapi("Language")
 
-export const Language = z.object({
-  name: z.string(),
-  version: z.string(),
-})
+export const TestCase = z
+  .object({
+    input: z.string(),
+    output: z.string(),
+  })
+  .openapi("TestCase")
 
-export const Problem = z.object({
-  body: z.string(),
-  id: z.number(),
-  supported_languages: z.array(Language),
-  test_cases: z.array(TestCase),
-  title: z.string(),
-})
+export const Problem = z
+  .object({
+    body: z.string(),
+    id: z.number().int().nonnegative(),
+    supported_languages: z.array(Language),
+    test_cases: z.array(TestCase),
+    title: z.string(),
+  })
+  .openapi("Problem")
 
-export const ProblemCreate = z.object({
-  body: z.string(),
-  supported_languages: z.array(Language),
-  test_cases: z.array(TestCase),
-  title: z.string(),
-})
+export const ProblemCreate = Problem.omit({ id: true }).openapi("ProblemCreate")
 
-export const ProblemUpdate = z.object({
-  body: z.string().optional(),
-  supported_languages: z.array(Language).optional(),
-  test_cases: z.array(TestCase).optional(),
-  title: z.string().optional(),
-})
+export const ProblemUpdate = Problem.partial()
+  .omit({ id: true })
+  .openapi("ProblemUpdate")
 
-export const SubmissionStatus = z.enum([
-  "Accepted",
-  "WrongAnswer",
-  "RuntimeError",
-  "CompileError",
-])
+export const SubmissionStatus = z
+  .enum(["Accepted", "WrongAnswer", "RuntimeError", "CompileError"])
+  .openapi("SubmissionStatus")
 
-export const TestStatus = z.enum(["Passed", "Failed"])
+export const TestStatus = z.enum(["Passed", "Failed"]).openapi("TestStatus")
 
-export const SubmissionResult = z.object({
-  message: z.string().optional(),
-  status: SubmissionStatus,
-})
+export const SubmissionResult = z
+  .object({
+    message: z.string().optional(),
+    status: SubmissionStatus,
+  })
+  .openapi("SubmissionResult")
 
-export const TestResult = z.object({
-  message: z.string().optional(),
-  status: TestStatus,
-  test_case_id: z.number(),
-})
+export const TestResult = z
+  .object({
+    message: z.string().optional(),
+    status: TestStatus,
+    test_case_id: z.number().int().nonnegative(),
+  })
+  .openapi("TestResult")
 
-export const Submission = z.object({
-  code: z.string(),
-  id: z.number(),
-  language: Language,
-  problem_id: z.number(),
-  result: SubmissionResult,
-  student_id: z.number(),
-  test_results: z.array(TestResult),
-})
+export const Submission = z
+  .object({
+    code: z.string(),
+    id: z.number().int().nonnegative(),
+    language: Language,
+    problem_id: z.number().int().nonnegative(),
+    result: SubmissionResult,
+    student_id: z.number().int().nonnegative(),
+    test_results: z.array(TestResult),
+  })
+  .openapi("Submission")
 
-export const SubmissionCreate = z.object({
-  problem_id: z.number(),
-})
+export const SubmissionCreate = z
+  .object({
+    problem_id: z.number().int().nonnegative(),
+  })
+  .openapi("SubmissionCreate")
